# authenticate-server

./: .gitignore  README.md  commands.json  cypress.config.js  google-chrome-stable_current_amd64.deb  helper.py  package.json  pyproject.toml
examples/python-fastapi-service/: pyproject.toml  run_e2e_python.py  server.py
sdk-python/: README.md  pyproject.toml
sdk-python/src/ntt_client_auth/: __init__.py  deps.py  jwks.py  models.py
server/: .dev.env  .example.env  .test.env  Dockerfile  docker-compose.yml  pyproject.toml  server.py
server/app/: config.py  seed.py
server/app/api/well_known/: route.py
server/app/database/: session.py
server/app/database/models/: __init__.py  association.py  oauth.py  profile.py  role.py  user.py
server/app/locales/: en.json  es.json  vi.json
server/app/services/: auth.py  i18n.py
server/frontend/: cypress.config.js  jest.config.js  package.json
server/frontend/.storybook/: main.js  preview.js
server/frontend/assets/: global.css  main.js
server/frontend/components/auth-form/: AuthForm.stories.js  auth-form.js  auth-form.test.js  style.css
server/frontend/components/auth-layout/: style.css
server/frontend/components/button/: Button.stories.js  button.css  button.js  button.test.js  style.css
server/frontend/components/divider/: divider.js  (+1 more)
server/frontend/pages/: auth_base.html  base.html
server/secrets/: dev_private_key.pem
server/tests/: conftest.py  test_api.py  test_i18n.py  test_jwks.py  test_jwt_verification.py  test_login.py  test_refresh.py  test_register.py  test_seed.py  test_seed_login.py
(+45 files in other folders)
